--- a/NavierStokes_FluidSimulation/NavierStokes_FluidSimulation.csproj
+++ b/NavierStokes_FluidSimulation/NavierStokes_FluidSimulation.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CellInfoModel.cs" />
+    <Compile Include="DirectBitmap.cs" />
     <Compile Include="FluidModel.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
@@ -57,7 +58,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ToolsLogic.cs" />
     <Compile Include="Utilities.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
